productions/veadk/archives/1.0.2/en/get-started/quickstart.mdx
---
title: "Quickstart"
zh_link: "/productions/veadk/archives/1.0.2/zh/get-started/quickstart"
---

This tutorial explains how to configure a model and run a minimal agent that
returns an answer in your terminal.

<Note>
  Complete the [installation](/productions/veadk/archives/1.0.2/en/get-started/installation) and obtain a
  Volcengine Ark API key first. This chapter covers only the minimal path to a
  first run; deploying to AgentKit, memory, knowledge bases, multi-agent, and
  evaluation are covered in their respective chapters.
</Note>

## Configure a model

Provide the credentials for calling the model in one of two ways. The simplest
is an environment variable — only the API key is required.

<Tabs>
  <Tab title="Environment variable">
    With the API key set, VeADK uses the default doubao model on Volcengine Ark:

    ```bash lines
    export MODEL_AGENT_API_KEY="your-ark-api-key"
    ```

    To use a different model, also set `MODEL_AGENT_NAME`, `MODEL_AGENT_PROVIDER`, and `MODEL_AGENT_API_BASE`.
  </Tab>
  <Tab title="Config file">
    Create `config.yaml` in the project root; VeADK reads it automatically:

    ```yaml config.yaml lines
    model:
      agent:
        provider: openai
        name: doubao-seed-1-8-251228
        api_base: https://ark.cn-beijing.volces.com/api/v3/
        api_key: # your Volcengine Ark API key
    ```

    `provider: openai` uses the OpenAI-compatible protocol, and `api_base` points at Ark's compatible endpoint, so Ark models such as doubao can be used directly.
  </Tab>
</Tabs>

## Write your first agent

Create `main.py`:

```python main.py lines
from veadk import Agent
import asyncio

agent = Agent()

res = asyncio.run(agent.run("Introduce Volcengine in one sentence."))
print(res)
```

`Agent` holds the model and instruction; with no arguments it uses the default
model from `config.yaml`. `agent.run(...)` is asynchronous and returns the final
text answer.

## Run

```bash lines
python main.py
```

The terminal prints the model's answer, completing a minimal VeADK agent run.
